# SirgateAPI

./: README.md  docker-compose.yml  init.sql
postgres/: Dockerfile
postgres/dump/: dumpfile.sql
postgres/schema/: schema.sql
redis/: launch.sh
rust-api/: .gitignore  Cargo.toml  Dockerfile  Dockerfile-api  Dockerfile-register
rust-api/src/: lib.rs  main.rs  models.rs  register-servers.rs  schema.rs
rust-api/src/controller/: achievement.rs  client.rs  database_manager.rs  dgs.rs  friends.rs  ranking.rs
rust-api/src/models/: achievement.rs  client.rs  dgs.rs  friends.rs  ranking.rs  user.rs
rust-api/src/view/: achievement.rs  client.rs  dgs.rs  friends.rs  ranking.rs  user.rs
shooter-server/: Dockerfile  register.sh
