[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.8.0", features = ["serde", "v4"] }
diesel = { version = "2.1.0", features = ["postgres", "uuid"] }
redis = "0.25.3"
actix-web = "4"
dotenvy = "0.15"
jsonwebtoken = "7.2.0"
bcrypt = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
argon2 = { version = "0.5.3" }
chrono = "0.4.37"
dotenv = "0.15.0"
lazy_static = "1.4.0"