[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.8.0", features = ["serde", "v4"] }
diesel = { version = "2.1.0", features = ["postgres", "uuid"] }
redis = { version = "0.25.3", features = ["json"]}
actix-web = "4"
dotenvy = "0.15"
jsonwebtoken = "9.3.0"
bcrypt = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = { version = "0.5.3" }
chrono = "0.4.37"