[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "register-servers"
path = "src/register-servers.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.8.0", features = ["serde", "v4"] }
diesel = { version = "2.1.0", features = ["postgres", "uuid", "r2d2"] }
actix-web = "4"
dotenvy = "0.15"
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = { version = "0.5.3" }
chrono = "0.4.37"
dotenv = "0.15.0"
lazy_static = "1.4.0"
redis = { version = "0.25.3", features = ["json"]}
r2d2 = "0.8.9"
tokio = { version = "1.0", features = ["full"] }
